Finished up the evaluations

--- a/model_evaluation.ipynb
+++ b/model_evaluation.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "id": "2eefcf7c",
    "metadata": {},
    "outputs": [],
@@ -123,41 +123,477 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "a313c339",
+   "metadata": {},
+   "source": [
+    "### An internal team wants to investigate the cause of the manufacturing defects. "
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "d87d5582",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "df = pd.read_csv(\"c3.csv\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "id": "c6d3b880",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>actual</th>\n",
+       "      <th>model1</th>\n",
+       "      <th>model2</th>\n",
+       "      <th>model3</th>\n",
+       "      <th>baseline_prediction</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>No Defect</td>\n",
+       "      <td>No Defect</td>\n",
+       "      <td>Defect</td>\n",
+       "      <td>No Defect</td>\n",
+       "      <td>No Defect</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>No Defect</td>\n",
+       "      <td>No Defect</td>\n",
+       "      <td>Defect</td>\n",
+       "      <td>Defect</td>\n",
+       "      <td>No Defect</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>No Defect</td>\n",
+       "      <td>No Defect</td>\n",
+       "      <td>Defect</td>\n",
+       "      <td>No Defect</td>\n",
+       "      <td>No Defect</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "      actual     model1  model2     model3 baseline_prediction\n",
+       "0  No Defect  No Defect  Defect  No Defect           No Defect\n",
+       "1  No Defect  No Defect  Defect     Defect           No Defect\n",
+       "2  No Defect  No Defect  Defect  No Defect           No Defect"
+      ]
+     },
+     "execution_count": 42,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.head(3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "id": "7375219f",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "No Defect    184\n",
+       "Defect        16\n",
+       "Name: actual, dtype: int64"
+      ]
+     },
+     "execution_count": 28,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.actual.value_counts()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "id": "10fded4c",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th>actual</th>\n",
+       "      <th>Defect</th>\n",
+       "      <th>No Defect</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>model1</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>Defect</th>\n",
+       "      <td>8</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>No Defect</th>\n",
+       "      <td>8</td>\n",
+       "      <td>182</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "actual     Defect  No Defect\n",
+       "model1                      \n",
+       "Defect          8          2\n",
+       "No Defect       8        182"
+      ]
+     },
+     "execution_count": 29,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "pd.crosstab(df.model1, df.actual)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "07930404",
+   "metadata": {},
+   "source": [
+    "Postive = Defects<br>\n",
+    "Negative = No Defects"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "394f3b72",
+   "metadata": {},
+   "source": [
+    "TP = Actual has Defects and Model has Defects<br>\n",
+    "FP = Actual has no Defects but Model has Defects<br>\n",
+    "FN = Actual has Defects but Model has no Defects<br>\n",
+    "TN = Actual has no Defects and Model has no Defects"
+   ]
   },
   {
    "cell_type": "markdown",
    "id": "c2409f05",
    "metadata": {},
    "source": [
-    "#### An internal team wants to investigate the cause of the manufacturing defects. They tell you that they want to identify as many of the ducks that have a defect as possible. Which evaluation metric would be appropriate here? Which model would be the best fit for this use case?"
+    "### They tell you that they want to identify as many of the ducks that have a defect as possible. Which evaluation metric would be appropriate here? Which model would be the best fit for this use case?"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "9d11caaa",
+   "execution_count": 43,
+   "id": "a903b462",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>actual</th>\n",
+       "      <th>model1</th>\n",
+       "      <th>model2</th>\n",
+       "      <th>model3</th>\n",
+       "      <th>baseline_prediction</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>No Defect</td>\n",
+       "      <td>No Defect</td>\n",
+       "      <td>Defect</td>\n",
+       "      <td>No Defect</td>\n",
+       "      <td>No Defect</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>No Defect</td>\n",
+       "      <td>No Defect</td>\n",
+       "      <td>Defect</td>\n",
+       "      <td>Defect</td>\n",
+       "      <td>No Defect</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>No Defect</td>\n",
+       "      <td>No Defect</td>\n",
+       "      <td>Defect</td>\n",
+       "      <td>No Defect</td>\n",
+       "      <td>No Defect</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "      actual     model1  model2     model3 baseline_prediction\n",
+       "0  No Defect  No Defect  Defect  No Defect           No Defect\n",
+       "1  No Defect  No Defect  Defect     Defect           No Defect\n",
+       "2  No Defect  No Defect  Defect  No Defect           No Defect"
+      ]
+     },
+     "execution_count": 43,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df['baseline_prediction'] = 'No Defect' #Most frequent label in actual\n",
+    "df.head(3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "id": "e89a9e72",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>actual</th>\n",
+       "      <th>model1</th>\n",
+       "      <th>model2</th>\n",
+       "      <th>model3</th>\n",
+       "      <th>baseline_prediction</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>13</th>\n",
+       "      <td>Defect</td>\n",
+       "      <td>No Defect</td>\n",
+       "      <td>Defect</td>\n",
+       "      <td>Defect</td>\n",
+       "      <td>No Defect</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>30</th>\n",
+       "      <td>Defect</td>\n",
+       "      <td>Defect</td>\n",
+       "      <td>No Defect</td>\n",
+       "      <td>Defect</td>\n",
+       "      <td>No Defect</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>65</th>\n",
+       "      <td>Defect</td>\n",
+       "      <td>Defect</td>\n",
+       "      <td>Defect</td>\n",
+       "      <td>Defect</td>\n",
+       "      <td>No Defect</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "    actual     model1     model2  model3 baseline_prediction\n",
+       "13  Defect  No Defect     Defect  Defect           No Defect\n",
+       "30  Defect     Defect  No Defect  Defect           No Defect\n",
+       "65  Defect     Defect     Defect  Defect           No Defect"
+      ]
+     },
+     "execution_count": 44,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Recall - calculate on subset of data\n",
+    "# only look at subset of actual positives (i.e actual == coffee)\n",
+    "subset = df[df.actual == 'Defect'] #postive \n",
+    "subset.head(3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 50,
+   "id": "5e0936e3",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "   model1 accuracy: 95.00%\n",
+      "   model2 accuracy: 56.00%\n",
+      "   model3 accuracy: 55.50%\n",
+      "\n",
+      "baseline accuracy: 92.00%\n"
+     ]
+    }
+   ],
+   "source": [
+    "model_accuracy = (df.actual == df.model1).mean()\n",
+    "print(f'   model1 accuracy: {model_accuracy:.2%}')\n",
+    "\n",
+    "model_accuracy = (df.actual == df.model2).mean()\n",
+    "print(f'   model2 accuracy: {model_accuracy:.2%}')\n",
+    "\n",
+    "model_accuracy = (df.actual == df.model3).mean()\n",
+    "print(f'   model3 accuracy: {model_accuracy:.2%}\\n')\n",
+    "\n",
+    "baseline_accuracy = (df.actual == df.baseline_prediction).mean()\n",
+    "print(f'baseline accuracy: {baseline_accuracy:.2%}')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "870509ea",
+   "metadata": {},
+   "source": [
+    "### Which evaluation metric would be appropriate here? \n",
+    "    I would focus on overall Accuracy for the evaluation metric.\n",
+    "\n",
+    "### Which model would be the best fit for this use case?\n",
+    "    I would pick the model with the most defects or the worst accuracy.  In our duck case, I would pick Model 3 @ 55% Accuracy"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a8a6e85f",
+   "metadata": {},
+   "source": [
+    "### Recently several stories in the local news have come out highlighting customers who received a rubber duck with a defect, and portraying C3 in a bad light. The PR team has decided to launch a program that gives customers with a defective duck a vacation to Hawaii. They need you to predict which ducks will have defects, but tell you the really don't want to accidentally give out a vacation package when the duck really doesn't have a defect.\n",
+    "    My first thought is how do I get my hands on one of these defective ducks"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 58,
+   "id": "5b4acafd",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "   model1 recall: 50.00%\n",
+      "   model2 recall: 56.25%\n",
+      "   model3 recall: 81.25%\n"
+     ]
+    }
+   ],
+   "source": [
+    "model_recall = (subset.actual == subset.model1).mean()\n",
+    "print(f'   model1 recall: {model_recall:.2%}')\n",
+    "\n",
+    "model_recall2 = (subset.actual == subset.model2).mean()\n",
+    "print(f'   model2 recall: {model_recall2:.2%}')\n",
+    "\n",
+    "model_recall3 = (subset.actual == subset.model3).mean()\n",
+    "print(f'   model3 recall: {model_recall3:.2%}')"
+   ]
   },
   {
    "cell_type": "markdown",
    "id": "c25156af",
    "metadata": {},
    "source": [
-    "#### Recently several stories in the local news have come out highlighting customers who received a rubber duck with a defect, and portraying C3 in a bad light. The PR team has decided to launch a program that gives customers with a defective duck a vacation to Hawaii. They need you to predict which ducks will have defects, but tell you the really don't want to accidentally give out a vacation package when the duck really doesn't have a defect. Which evaluation metric would be appropriate here? Which model would be the best fit for this use case?"
+    "### Which evaluation metric would be appropriate here?\n",
+    "    I would use recall to get only the ones that are defects.\n",
+    "### Which model would be the best fit for this use case?\n",
+    "    I would use Model 3. It had the highest recall percentage"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7903abf5",
+   "id": "337ae699",
    "metadata": {},
    "outputs": [],
    "source": []
