finished up evaluation

--- a/model_evaluation.ipynb
+++ b/model_evaluation.ipynb
@@ -1172,6 +1172,202 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 44,
+   "id": "bd0a2c99",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>actual</th>\n",
+       "      <th>model1</th>\n",
+       "      <th>model2</th>\n",
+       "      <th>model3</th>\n",
+       "      <th>model4</th>\n",
+       "      <th>baseline_prediction</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>dog</td>\n",
+       "      <td>dog</td>\n",
+       "      <td>cat</td>\n",
+       "      <td>cat</td>\n",
+       "      <td>dog</td>\n",
+       "      <td>dog</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>dog</td>\n",
+       "      <td>cat</td>\n",
+       "      <td>cat</td>\n",
+       "      <td>cat</td>\n",
+       "      <td>dog</td>\n",
+       "      <td>dog</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>dog</td>\n",
+       "      <td>dog</td>\n",
+       "      <td>dog</td>\n",
+       "      <td>cat</td>\n",
+       "      <td>dog</td>\n",
+       "      <td>dog</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>dog</td>\n",
+       "      <td>dog</td>\n",
+       "      <td>dog</td>\n",
+       "      <td>dog</td>\n",
+       "      <td>dog</td>\n",
+       "      <td>dog</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>dog</td>\n",
+       "      <td>dog</td>\n",
+       "      <td>cat</td>\n",
+       "      <td>dog</td>\n",
+       "      <td>dog</td>\n",
+       "      <td>dog</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "  actual model1 model2 model3 model4 baseline_prediction\n",
+       "1    dog    dog    cat    cat    dog                 dog\n",
+       "2    dog    cat    cat    cat    dog                 dog\n",
+       "3    dog    dog    dog    cat    dog                 dog\n",
+       "5    dog    dog    dog    dog    dog                 dog\n",
+       "8    dog    dog    cat    dog    dog                 dog"
+      ]
+     },
+     "execution_count": 44,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "subset = df[df.actual == 'dog'] # recall\n",
+    "subset.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "id": "e70fcf04",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.803318992009834"
+      ]
+     },
+     "execution_count": 40,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "(subset.actual == subset.model1).mean()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "id": "087ff278",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.49078057775046097"
+      ]
+     },
+     "execution_count": 41,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "(subset.actual == subset.model2).mean()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "id": "39563026",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.5086047940995697"
+      ]
+     },
+     "execution_count": 42,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "(subset.actual == subset.model3).mean()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "id": "2a84101c",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.9557467732022127"
+      ]
+     },
+     "execution_count": 43,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "(subset.actual == subset.model4).mean()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6dfa0984",
+   "metadata": {},
+   "source": [
+    "    I would go with model 4 as it has more dogs"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "ab610695",
    "metadata": {},
@@ -1181,11 +1377,105 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 46,
    "id": "a945e6dd",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "subset = df[df.actual == 'cat']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
+   "id": "c33182fb",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.8150057273768614"
+      ]
+     },
+     "execution_count": 48,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "(subset.actual == subset.model1).mean()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
+   "id": "1add2d30",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.8906071019473081"
+      ]
+     },
+     "execution_count": 49,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "(subset.actual == subset.model2).mean()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 50,
+   "id": "1e4f4e35",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.5114547537227949"
+      ]
+     },
+     "execution_count": 50,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "(subset.actual == subset.model3).mean()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 51,
+   "id": "fca9b30f",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.34536082474226804"
+      ]
+     },
+     "execution_count": 51,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "(subset.actual == subset.model4).mean()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c2d56159",
+   "metadata": {},
+   "source": [
+    "    Model 2 has the most cats"
+   ]
   }
  ],
  "metadata": {
