--- a/Classification Project.ipynb
+++ b/Classification Project.ipynb
@@ -1072,7 +1072,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 25,
    "id": "f857fc4a",
    "metadata": {
     "scrolled": true
@@ -1084,7 +1084,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 26,
    "id": "c56ad45b",
    "metadata": {},
    "outputs": [],
@@ -1094,7 +1094,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 27,
    "id": "d1a84a3e",
    "metadata": {},
    "outputs": [],
@@ -1106,7 +1106,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 28,
    "id": "0a7b865a",
    "metadata": {},
    "outputs": [],
@@ -1118,7 +1118,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 29,
    "id": "2d3588e0",
    "metadata": {},
    "outputs": [],
@@ -1128,7 +1128,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 30,
    "id": "d6e25137",
    "metadata": {},
    "outputs": [],
@@ -1138,7 +1138,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 31,
    "id": "7595e938",
    "metadata": {},
    "outputs": [],
@@ -1153,7 +1153,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 32,
    "id": "14c66cd2",
    "metadata": {},
    "outputs": [],
@@ -1166,7 +1166,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 33,
    "id": "fa6e431e",
    "metadata": {},
    "outputs": [],
@@ -1176,7 +1176,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 34,
    "id": "f32576a4",
    "metadata": {},
    "outputs": [],
@@ -1193,7 +1193,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 35,
    "id": "6ed5ba4c",
    "metadata": {},
    "outputs": [],
@@ -1203,7 +1203,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 36,
    "id": "ad734aca",
    "metadata": {},
    "outputs": [],
@@ -1213,7 +1213,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 37,
    "id": "88d07188",
    "metadata": {},
    "outputs": [],
@@ -1223,7 +1223,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 38,
    "id": "7dfaf205",
    "metadata": {},
    "outputs": [
@@ -1242,7 +1242,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 39,
    "id": "8ced93d9",
    "metadata": {},
    "outputs": [
@@ -1264,6 +1264,177 @@
    ],
    "source": [
     "print(classification_report(y_train, y_pred))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "id": "1c8e9628",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>tenure</th>\n",
+       "      <th>monthly_charges</th>\n",
+       "      <th>total_charges</th>\n",
+       "      <th>gender_Male</th>\n",
+       "      <th>partner_Yes</th>\n",
+       "      <th>dependents_Yes</th>\n",
+       "      <th>phone_service_Yes</th>\n",
+       "      <th>paperless_billing_Yes</th>\n",
+       "      <th>churn</th>\n",
+       "      <th>multiple_lines_No</th>\n",
+       "      <th>...</th>\n",
+       "      <th>payment_Bank transder</th>\n",
+       "      <th>payment_Credit card</th>\n",
+       "      <th>payment_Electronic check</th>\n",
+       "      <th>payment_Mailed check</th>\n",
+       "      <th>internet_service_DSL</th>\n",
+       "      <th>internet_service_Fiber optic</th>\n",
+       "      <th>internet_service_None</th>\n",
+       "      <th>contract_Month-to-month</th>\n",
+       "      <th>contract_One year</th>\n",
+       "      <th>contract_Two year</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>5919</th>\n",
+       "      <td>58</td>\n",
+       "      <td>71.10</td>\n",
+       "      <td>4299.20</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1915</th>\n",
+       "      <td>71</td>\n",
+       "      <td>85.45</td>\n",
+       "      <td>6028.95</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5054</th>\n",
+       "      <td>35</td>\n",
+       "      <td>25.75</td>\n",
+       "      <td>882.55</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>3 rows × 40 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "      tenure  monthly_charges  total_charges  gender_Male  partner_Yes  \\\n",
+       "5919      58            71.10        4299.20            0            0   \n",
+       "1915      71            85.45        6028.95            1            0   \n",
+       "5054      35            25.75         882.55            0            1   \n",
+       "\n",
+       "      dependents_Yes  phone_service_Yes  paperless_billing_Yes  churn  \\\n",
+       "5919               0                  1                      1      0   \n",
+       "1915               1                  1                      1      0   \n",
+       "5054               1                  1                      1      0   \n",
+       "\n",
+       "      multiple_lines_No  ...  payment_Bank transder  payment_Credit card  \\\n",
+       "5919                  0  ...                      0                    1   \n",
+       "1915                  0  ...                      0                    1   \n",
+       "5054                  0  ...                      0                    0   \n",
+       "\n",
+       "      payment_Electronic check  payment_Mailed check  internet_service_DSL  \\\n",
+       "5919                         0                     0                     1   \n",
+       "1915                         0                     0                     0   \n",
+       "5054                         1                     0                     0   \n",
+       "\n",
+       "      internet_service_Fiber optic  internet_service_None  \\\n",
+       "5919                             0                      0   \n",
+       "1915                             1                      0   \n",
+       "5054                             0                      1   \n",
+       "\n",
+       "      contract_Month-to-month  contract_One year  contract_Two year  \n",
+       "5919                        0                  1                  0  \n",
+       "1915                        0                  1                  0  \n",
+       "5054                        1                  0                  0  \n",
+       "\n",
+       "[3 rows x 40 columns]"
+      ]
+     },
+     "execution_count": 40,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "train.head(3)"
    ]
   },
   {
