--- a/model.ipynb
+++ b/model.ipynb
@@ -937,8 +937,8 @@
     "for leaf in range(1,11):\n",
     "    for depth in range(1,11):\n",
     "        f_train = forest_train(leaf, depth)\n",
-    "        f_validate = forest_validate(leaf, depth)\n",
-    "        difference = abs(f_train - f_validate)\n",
+    "        f_validate = forest_validate(leaf, depth) # i didn't reference f_validate in this loop\n",
+    "        difference = abs(f_train - f_validate) # didn't use the difference in this loop\n",
     "        score = f_train\n",
     "        if (leaf == 1) & (depth == 1):\n",
     "            best_difference = difference\n",
@@ -984,12 +984,15 @@
    ],
    "source": [
     "# Searching for best Validate \n",
+    "\n",
+    "\n",
     "for leaf in range(1,11):\n",
     "    for depth in range(1,11):\n",
     "        f_train = forest_train(leaf, depth)\n",
     "        f_validate = forest_validate(leaf, depth)\n",
     "        difference = abs(f_train - f_validate)\n",
     "        score = f_validate\n",
+    "        \n",
     "        if (leaf == 1) & (depth == 1):\n",
     "            best_difference = difference\n",
     "            best_leaf = leaf\n",
@@ -1963,6 +1966,136 @@
    "metadata": {},
    "source": [
     "### Model 1 Using the features 'age', 'fare', 'pclass'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 252,
+   "id": "b6b83c6e",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>age</th>\n",
+       "      <th>fare</th>\n",
+       "      <th>pclass</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>455</th>\n",
+       "      <td>29.000000</td>\n",
+       "      <td>7.8958</td>\n",
+       "      <td>3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>380</th>\n",
+       "      <td>42.000000</td>\n",
+       "      <td>227.5250</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>492</th>\n",
+       "      <td>55.000000</td>\n",
+       "      <td>30.5000</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>55</th>\n",
+       "      <td>29.393566</td>\n",
+       "      <td>35.5000</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>243</th>\n",
+       "      <td>22.000000</td>\n",
+       "      <td>7.1250</td>\n",
+       "      <td>3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>695</th>\n",
+       "      <td>52.000000</td>\n",
+       "      <td>13.5000</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>128</th>\n",
+       "      <td>29.393566</td>\n",
+       "      <td>22.3583</td>\n",
+       "      <td>3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>636</th>\n",
+       "      <td>32.000000</td>\n",
+       "      <td>7.9250</td>\n",
+       "      <td>3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>222</th>\n",
+       "      <td>51.000000</td>\n",
+       "      <td>8.0500</td>\n",
+       "      <td>3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>496</th>\n",
+       "      <td>54.000000</td>\n",
+       "      <td>78.2667</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>534 rows × 3 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "           age      fare  pclass\n",
+       "455  29.000000    7.8958       3\n",
+       "380  42.000000  227.5250       1\n",
+       "492  55.000000   30.5000       1\n",
+       "55   29.393566   35.5000       1\n",
+       "243  22.000000    7.1250       3\n",
+       "..         ...       ...     ...\n",
+       "695  52.000000   13.5000       2\n",
+       "128  29.393566   22.3583       3\n",
+       "636  32.000000    7.9250       3\n",
+       "222  51.000000    8.0500       3\n",
+       "496  54.000000   78.2667       1\n",
+       "\n",
+       "[534 rows x 3 columns]"
+      ]
+     },
+     "execution_count": 252,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "train[['age', 'fare', 'pclass']]"
    ]
   },
   {
